--- a/play.yml
+++ b/play.yml
@@ -7,6 +7,7 @@
   tasks:
   - name: Deploy pod Service
     shell: |
+      aws eks update-kubeconfig --name eks-cluster
       kubectl delete pod mywebsite-pod
       kubectl delete svc mywebsite-svc
       kubectl apply -f pod.yml
