--- a/play.yml
+++ b/play.yml
@@ -8,7 +8,7 @@
   - name: Deploy pod Service
     shell: |
       aws eks update-kubeconfig --name eks-cluster
-      kubectl delete pod mywebsite-pod
-      kubectl delete svc mywebsite-svc
+      #kubectl delete pod mywebsite-pod
+      #kubectl delete svc mywebsite-svc
       kubectl apply -f pod.yml
       kubectl apply -f ser.yml
